  [no-id]  Fix the timing of the HD44780 driver in the stdiodemo.
  [#15512] Bootloader macros not interrupt safe.
  [#16434] EMPTY_INTERRUPT has no misspelled vector checking
  [#16411] Add 'used' and 'externally_visible' attributes to all ISR macros.
  [#16441] eeprom.h should use __asm__
  [#17068] wdt.h file: __AVR_ATmeg324P__ spelling mistake
  [#17608] Add ISR_ALIAS() to avr/interrupt.h

* Other changes:

  - New Power Management API in <avr/power.h>. This provides C language
    macros to manipulate the Power Reduction Register(s) across multiple
    processors.

* New devices supported:

  + ATmega165P
  + ATmega169P
  + ATmega2560 [patch #4461]
  + ATmega2561 [patch #4461]
  
*** Changes in avr-libc-1.4.4:

* Bugs fixed:

  [no-id]  Fix location of OCR1 in simple demo for ATmega16/32
  [no-id]  Typo in iomxx0_1.h: PRUSART3.
  [no-id]  Fix the sleep mode definitions for the ATtiny2313.
  [#15519] AT90CAN* processors incorrectly identified as "AT90S family"
  [#15522] Typo in iotn2313.h vector table
  [#15559] Wrong macro for boot_page_write(address) and ATmega128
  [#15574] unneeded compatibility break
  [#15595] GPIOR0 misspelled for ATtiny25/45/85
  [#15732] interrupt.h: ISR() incompatibility with gcc 3.4.5
  [#15890] missing /devtools/gen-avr-lib-tree.sh
  [#16039] Names in Pxy (i.e. PA0) style of ports pins for some devices are
           not defined.
  [#16260] _crc16_update lacks C equivalent

* Other changes:

  - The simple demo has been ported to ATmega640, ATmega644P,
    ATmega1280, ATmega1281.

* New devices supported:

  + ATmega406
  + ATmega169 Rev. F
  + AT90USB646
  + AT90USB647
  + AT90USB1286
  + AT90USB1287
  + ATmega164P (renamed from ATmega164)
  + ATmega324P (renamed from ATmega324)
  + ATmega644P

*** Changes in avr-libc-1.4.3:

* Bugs fixed:

  [no-id]  Not defined SPM_PAGESIZE for ATtinyX4/X5/X61 and ATtiny2313 devices.
  [#15494] Compile warning and errors if compiler flag -Wundef flag specified

*** Changes in avr-libc-1.4.2:
