@@ -10,6 +10,8 @@
   [#16411] Add 'used' and 'externally_visible' attributes to all ISR macros.
   [#16441] eeprom.h should use __asm__
   [#17068] wdt.h file: __AVR_ATmeg324P__ spelling mistake
+  [#17591] /avr-libc/libm/fplib/fp_split.S error return will fail for
+           3-Byte PC devices
   [#17608] Add ISR_ALIAS() to avr/interrupt.h
 
 * Other changes:
